force-app/main/default/objects/Provider_Imaging__c/Provider_Imaging__c.object-meta.xml
<CustomObject>
    <label>Provider Imaging</label>
    <nameField>
        <label>Provider Imaging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Imaging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>