force-app/main/default/objects/Provider_Imaging__c/fields/Imaging__c.field-meta.xml
<CustomField>
    <fullName>Imaging__c</fullName>
    <label>Imaging</label>
    <referenceTo>Imaging__c</referenceTo>
    <relationshipLabel>Provider Imaging</relationshipLabel>
    <relationshipName>Provider_Imaging</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>