force-app/main/default/objects/Provider_Imaging__c/fields/Imaging_Name__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Name__c</fullName>
    <formula>Imaging__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imaging Name</label>
    <type>Text</type>
</CustomField>